--August 13, 2009--
- Commented the remaining headers under /savesystem, removed unused files and the /vng dir.

--August 12, 2009--
- Added to BranchDialog class a simple regexp validator, in order to avoid use of non-standard
  characters when the user types a new branch name.
- Starting writing apidox documentation, removin useless methods and fixing style.

--August 10, 2009--
- Fixed StartPage issue: opening/creating a project, when an other one is already open, now
  works.
- TimeLine didn't reload properly when changing from an existing project to an other. Fixed.

--August 9, 2009--
- Moved "New SavePoint" buttom from timeline to workflow dock widget. Changed workflow
  signals connection in order to restore the previous tab after setting a SavePoint.
- Added bool GitRunner::hasNewChangesToCommit(), so New SavePoint dialog is triggered only if
  there are uncommitted changes.
- Moved "On Section: <name>" button on the top of TimeLine dock for usability reason, because
  if there are lots of SavePoints, the user has to scroll down each time he want to perfom an
  action Section-related.
- Fixed plasma-containment-studiopreviewer.desktop file; now it doesn't interacts with 
  "Desktop Settings" -> "Desktop Activity" entries.
- Some fixes and coding style fix.

--August 3, 2009--
- When creating a new project, metadata.desktop file is filled with the required fields
- Added setAuthor and setEmail to GitRunner class, so now TimeLine can set that fields
- Review createNewProject code.
- Fixed some krazy warnings.

--July 30, 2009--
- New Project page displays now two fields, Author and Email, defaulted to <username> and
  <username>@none.org. These values are inserted in the header contained int the main script
  file.

--July 29, 2009--
- Fixed saving/reloading layout ( still need some fixing with previewer dimensions btw )
- Now templates are installed under $KDEDIR/share/apps/plasmate/templates